[package]
name = "lumberjack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
freedesktop-icons = "0.1.1"
xdg-mime = "0.3"

[dependencies.sdl2]
version = "0.35.0"
default-features = false
features = ["ttf", "gfx", "image"]

